--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -5,6 +5,10 @@
     --one: 0.0625rem;
 }
 
+body {
+    padding-right: 0 !important;
+}
+
 /* Custom classes */
 .h-medium {
     height: var(--hero-medium);
@@ -61,11 +65,6 @@
 .mr-2 {
     margin-right: 0.5rem;
 }
-
-.ml-auto {
-    margin-left: auto;
-}
-
 
 .max-w-xl {
     max-width: 36rem;
